force-app/config/objects/Routing_Skill_Mapping__mdt/fields/Agent_Skill__c.field-meta.xml
<CustomField>
    <fullName>Agent_Skill__c</fullName>
    <description>Which skill dimension to evaluate against agents. References an Agent_Skill__mdt record.</description>
    <label>Agent Skill</label>
    <referenceTo>Agent_Skill__mdt</referenceTo>
    <relationshipLabel>Routing Skill Mappings</relationshipLabel>
    <relationshipName>Routing_Skill_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>