force-app/config/objects/Routing_Skill_Mapping__mdt/fields/Is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Mandatory__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, this skill mapping is a hard filter — agents who lack this skill value are excluded. When unchecked, the mapping is informational and does not disqualify agents.</description>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>