force-app/config/objects/Routing_Skill_Mapping__mdt/fields/Routing_Config__c.field-meta.xml
<CustomField>
    <fullName>Routing_Config__c</fullName>
    <description>Parent routing configuration this skill mapping applies to.</description>
    <label>Routing Config</label>
    <referenceTo>Routing_Config__mdt</referenceTo>
    <relationshipLabel>Skill Mappings</relationshipLabel>
    <relationshipName>Skill_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>